# ChangeLog for games-action/glaxium
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/games-action/cvs-repo/gentoo-x86/games-action/glaxium/Attic/ChangeLog,v 1.16 2007/09/24 21:51:04 nyhm Exp $

*glaxium-0.5-r1 (24 Sep 2007)

  24 Sep 2007; Tristan Heaven <nyhm@gentoo.org>
  +files/glaxium-0.5-freeglut.patch, +glaxium-0.5-r1.ebuild:
  Crash fix by Charles Clément, bug #193343

  21 Sep 2007; Tristan Heaven <nyhm@gentoo.org> glaxium-0.5.ebuild:
  Remove check for x11-drivers/nvidia-legacy-drivers, bug #193304

  03 Feb 2007; Tristan Heaven <nyhm@gentoo.org>
  +files/glaxium-0.5-build.patch, glaxium-0.5.ebuild:
  Don't use egamesinstall

  26 Sep 2006; Tristan Heaven <nyhm@gentoo.org> glaxium-0.5.ebuild:
  Check for nvidia-drivers instead of nvidia-glx, bug #146452

  02 Apr 2006; <Tupone@gentoo.org> +files/glaxium-0.5-glx.patch,
  -files/0.5-another-glx.patch, -files/0.5-glx.patch,
  +files/glaxium-0.5-gcc41.patch, -files/glx-test.c, glaxium-0.5.ebuild:
  Fixing crash on startup, bug #58289 by Loz Hygate.
  Thanks go to Sam Mertens and Jim Ramsay too.
  Fix compiling with gcc-4.1, bug #120747 by joshuabaergen

  28 Jan 2006; Joshua Baergen <joshuabaergen@gentoo.org> glaxium-0.5.ebuild:
  Add modular X dependencies.

  17 May 2005; Chris Gianelloni <wolf31o2@gentoo.org> glaxium-0.5.ebuild:
  Cleanup for bug #92745.

  03 Sep 2004; Michael Sterrett <mr_bones_@gentoo.org> +files/0.5-rc.patch,
  glaxium-0.5.ebuild:
  added the rc patch from Loz Hygate via bug #58289

  19 Apr 2004; Chris Gianelloni <wolf31o2@gentoo.org> glaxium-0.5.ebuild:
  Added IUSE.

  04 Feb 2004; David Holm <dholm@gentoo.org> glaxium-0.5.ebuild:
  Added to ~ppc.

*glaxium-0.5 (19 Jun 2003)

  12 Jan 2004; Mike Frysinger <vapier@gentoo.org> :
  Add another nvidia patch ... this time for 1.0.5328 #37752.

  15 Dec 2003; Jon Portnoy <avenj@gentoo.org> glaxium-0.5.ebuild :
  AMD64 keywords.
