@@ -1,6 +1,6 @@
 DIST bomberclone-0.11.7.tar.bz2 7940132 RMD160 e2267a1c80eb809f4c4233a98f68ad316ead2cb0 SHA1 108948667d0504cedfddaf4a55e69b221b14edbd SHA256 2be2db58488d04524252b0c7f5cafb9c5dc3bd795c5bd521a8eb0b80ac5ee492
 DIST bomberclone-0.11.8.tar.bz2 7966452 RMD160 aaac2d55dd00626bf958dfa64b73f118b826664d SHA1 a900b716683f9267bfd28d9687049e1f65335f95 SHA256 2f6993ee4a63e8cea51f9605e35de4b4ec12a5abafd25309c313ddb0fba35230
 EBUILD bomberclone-0.11.7.ebuild 1264 RMD160 4d6787ffc80a941df4bc3c669c685ea15169c48d SHA1 e93feb3a57147ef56d545a6dfbf08d1198698e98 SHA256 7aa70f8cc05c15c8570431ff9ff9c39d9c7a7c6caf06fefa16c7330aea4c93a6
-EBUILD bomberclone-0.11.8.ebuild 1264 RMD160 abcb143d242440f7cb60884d328ce8b3f9c589b5 SHA1 d3cb1e38fb6e6535bdb941f867bee1d4a550fb43 SHA256 3d1fc450e7524aaf346765740d9222387594a08fd4a7cb0062778f3b40a5f6c8
-MISC ChangeLog 3821 RMD160 75f9c6acf946876cb1841b35f6181281edd692ba SHA1 a34108c1ed1d35ad247b0141312285a633a16387 SHA256 f78e5199c7ecbe0f8050294bf3d6e5c663935d4b4ce30e750a5e5042a9ab3e3b
+EBUILD bomberclone-0.11.8.ebuild 1262 RMD160 037a7b4d0aa2d63869a7b9329f5247db7029a063 SHA1 0b23f5636ed0bc50b525f6244ee5850c256c7e82 SHA256 4fb67850b2ce58c5dfcb70a805be527cf8869b98fa18adeef462573ddd02e913
+MISC ChangeLog 3921 RMD160 f783fe4b72b97b73e9f000e48af976092dd16971 SHA1 8beca0dd736979ca7ef132f05e62f3177d5c4250 SHA256 a3293499c52383b6b836aa99c0dbfaa3ba6978a2e73b47caa3acf761ea0db336
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
