@@ -4,7 +4,7 @@ AUX glaxium-0.5-freeglut.patch 393 RMD160 00bc74e16665090b81b26c698464131e064d55
 AUX glaxium-0.5-gcc41.patch 808 RMD160 1943be88713d73836b32704b27a25473d94dec63 SHA1 97f9fbcfc3f1ca648c3d2e8a45f55e0a8bfefc67 SHA256 9e1ab3e231d583db0a8187dd86c6457ba80eef2ac3c539143229d11d75a86625
 AUX glaxium-0.5-glx.patch 2017 RMD160 e2e282f57c23de04c30d1d551efc30a937679812 SHA1 ed0514cc8abc3ee96a052b5486cc7f033b9ee33f SHA256 e9875901eae693bb62c3fe3871dce796b4a5325131d022e40779cb47bf3a3319
 DIST glaxium_0.5.tar.gz 1692219 RMD160 5c988c53d4205ac80e0011a893a80daecf096c1f SHA1 42526a009a377a6fede7b7d343a0cd57c2f8e23e SHA256 78f5a9e1785e9e39f6dcb32134a3bd224372f572f191e7ed77bf50b109afb5f7
-EBUILD glaxium-0.5-r1.ebuild 1035 RMD160 2dc9dc40ce60dd7a0c1e3f08312612a30cd70bbd SHA1 28b6792f742f301fdaeb1b21facfba9d0d78f4d8 SHA256 a570dce4fa1d85bb666956efa2fd57d4e3f7660ea8584a4d7cdaa8e16ae1b514
+EBUILD glaxium-0.5-r1.ebuild 1036 RMD160 631a37b94509b36a12626cfdd273f6836f88ac72 SHA1 71bdc6e30466fc969ed4e064097fd95f37922c0c SHA256 f58fdf728ca3577fb75300d7568e35b1190bca304e214bce30223743eabf00a0
 EBUILD glaxium-0.5.ebuild 992 RMD160 e64cc0ab1e8cbd3402430bedf863198355859cb0 SHA1 ae8e99c8495eaf75522d93a629f9f541f3fb6145 SHA256 14d50afcd81dc5c35f2414247a399576029d5ddb4f7d5e24a9ff5e38195031d0
-MISC ChangeLog 2177 RMD160 fd5b8dfd7e892f9f4257cd0f06feb8c0de0be1af SHA1 a36088cd5c4592c4dec6ce1589618d1f41190a3c SHA256 8f478a1902e90a2660cbeb0611f93ddb40a64de39d88517d43544d9ab2ae8bd1
+MISC ChangeLog 2276 RMD160 614c75504e6b6e433b280bf77ef1e7d1bc7aa48e SHA1 c2c43c5ae46eb49ac6a0e1fe10076dbae2d0eb45 SHA256 3277b53de6efea1ec787715c5385e29c192b19a03d83458b5831d37e91f435ff
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
