@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-action/cvs-repo/gentoo-x86/games-action/glaxium/Attic/glaxium-0.5-r1.ebuild,v 1.1 2007/09/24 21:51:04 nyhm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-action/cvs-repo/gentoo-x86/games-action/glaxium/Attic/glaxium-0.5-r1.ebuild,v 1.2 2008/06/25 19:38:51 nixnut Exp $
 
 inherit autotools eutils games
 
@@ -10,7 +10,7 @@ SRC_URI="http://xhosxe.free.fr/${PN}/${PN}_${PV}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~x86"
+KEYWORDS="~amd64 ppc ~x86"
 IUSE=""
 
 DEPEND="media-libs/libsdl
