@@ -1,6 +1,9 @@
 # ChangeLog for games-action/glaxium
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-action/cvs-repo/gentoo-x86/games-action/glaxium/Attic/ChangeLog,v 1.16 2007/09/24 21:51:04 nyhm Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/games-action/cvs-repo/gentoo-x86/games-action/glaxium/Attic/ChangeLog,v 1.17 2008/06/25 19:38:51 nixnut Exp $
+
+  25 Jun 2008; nixnut <nixnut@gentoo.org> glaxium-0.5-r1.ebuild:
+  Stable on ppc wrt bug 229295
 
 *glaxium-0.5-r1 (24 Sep 2007)
 
